# webapp

./: CMakeLists.txt  CMakeLists.txt.user.3d6de84  CMakeLists.txt.user.9fbdd07  CMakeLists.txt.user.dff7715
chatservice/: CMakeLists.txt  main.cpp
gameservice/: CMakeLists.txt
gameservice/src/: main.cpp
microservice/: CMakeLists.txt
microservice/base_unit/: CMakeLists.txt
microservice/base_unit/include/: micro_service.hpp
microservice/base_unit/src/: micro_service.cpp
microservice/data_unit/: CMakeLists.txt
microservice/data_unit/include/: sql_driver.hpp
microservice/data_unit/src/: sql_driver.cpp
microservice/logic_unit/: CMakeLists.txt
microservice/logic_unit/include/: logic_controller.hpp
microservice/logic_unit/src/: logic_controller.cpp
microservice/network_unit/: CMakeLists.txt
microservice/network_unit/include/: http_server.hpp  microsvc_controller.hpp
microservice/network_unit/src/: http_server.cpp  microsvc_controller.cpp
studentservice/: CMakeLists.txt  main.cpp
threadservice/: CMakeLists.txt  main.cpp
utils/: CMakeLists.txt
utils/include/: network_utils.hpp  runtime_utils.hpp  usr_interrupt_handler.hpp
utils/src/: network_utils.cpp
